# video-studio

./: .gitignore  CLAUDE.md  Makefile  README.md  Video Studio.spec  pyproject.toml
src/video_studio/: __init__.py  app.py  cli.py  config.py
src/video_studio/annotation/: renderer.py  shapes.py
src/video_studio/audio/: bgm_track.py  mixer.py
src/video_studio/avatar/: compositor.py  sadtalker.py  wav2lip.py
src/video_studio/core/: ffmpeg_utils.py  pipeline.py  project.py  timeline.py
src/video_studio/editor/: concat.py  trimmer.py
src/video_studio/gui/: main.py  main_window.py  preview_overlay.py  render_dialog.py  theme.py  timeline_widget.py  undo_redo.py  video_player.py
src/video_studio/gui/dialogs/: annotation_dialog.py  avatar_dialog.py  bgm_dialog.py  effect_dialog.py  insert_menu.py  mosaic_dialog.py  speed_dialog.py  subtitle_dialog.py
src/video_studio/gui/panels/: annotation_panel.py  avatar_panel.py  bgm_panel.py  cut_panel.py  mosaic_panel.py  render_panel.py  subtitle_panel.py  tool_tabs.py
src/video_studio/mosaic/: blur.py  region.py
src/video_studio/subtitles/: renderer.py  track.py  tts.py
tests/: test_annotation.py  test_avatar_compositor.py  test_ffmpeg_utils.py  test_mosaic.py  test_project.py  test_project_serialization.py  test_subtitle_renderer.py  test_subtitle_track.py  test_timeline.py  test_tts.py
